Minor UI updates

--- a/shellyupdater/setter/templates/shelly_settings_wizard_preview.html
+++ b/shellyupdater/setter/templates/shelly_settings_wizard_preview.html
@@ -10,6 +10,11 @@
 
     {# Main Section #}
 
+    <div class="container-fluid" style="margin-top:20px;">
+        <h3>Update Wizard (3/3)</h3>
+        <h4>Review and apply your settings</h4>
+    </div>
+
     <div class="container-fluid">
         <h4>Your selection</h4>
         <div class="row">
