--- a/shellyupdater/setter/templates/shelly_settings_wizard_select.html
+++ b/shellyupdater/setter/templates/shelly_settings_wizard_select.html
@@ -11,6 +11,7 @@
     {# Main Section #}
 
     <div class="container-fluid" style="margin-top:20px;">
+        <h3>Update Wizard (1/3)</h3>
         <h4>Please choose Shelly-Type, one or more Shelly and a Settings-Area to change</h4>
     </div>
 
