--- a/shellyupdater/setter/templates/shelly_settings_wizard_values.html
+++ b/shellyupdater/setter/templates/shelly_settings_wizard_values.html
@@ -10,6 +10,11 @@
 
     {# Main Section #}
 
+    <div class="container-fluid" style="margin-top:20px;">
+        <h3>Update Wizard (2/3)</h3>
+        <h4>Enter the settings you would like to change. </h4>
+    </div>
+
     <div class="container-fluid">
         <h4>Your selection</h4>
         <div class="row">
