--- a/shellyupdater/templates/base.html
+++ b/shellyupdater/templates/base.html
@@ -26,6 +26,7 @@
             {% block head_css_site %}
                 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
                 <link rel="stylesheet" href="{% static 'css/bootstrap-table.min.css' %}" type="text/css">
+                <link rel="stylesheet" href="{% static 'css/bootstrap-table-filter-control.min.css' %}" type="text/css">
                 <link rel="stylesheet" href="{% static 'css/simple-sidebar.css' %}" type="text/css">
                 <link rel="stylesheet" href="{% static 'css/custom.css' %}" type="text/css">
                 <link rel="stylesheet" href="{% static 'css/all.min.css' %}" type="text/css">
@@ -42,14 +43,14 @@
 
         <div class="d-flex" id="wrapper">
 
-            <!-- Sidebar -->
+            <!-- Sidebar
             <div class="bg-light border-right" id="sidebar-wrapper">
                 <div class="sidebar-heading">Shelly Updater</div>
                 <div class="list-group list-group-flush">
                     <a href="{% url 'home' %}" class="list-group-item list-group-item-action bg-light">Home</a>
                 </div>
             </div>
-        <!-- /#sidebar-wrapper -->
+            /#sidebar-wrapper -->
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
@@ -64,17 +65,31 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'home' %}">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'shellies' %}" class="list-group-item list-group-item-action bg-light">Shellies Overview</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="{% url 'home' %}" id="navbarDropdownShellies"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shellies</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownShellies">
+                                <a class="dropdown-item" href="{% url 'shellies' %}">Overview</a>
+                                <a class="dropdown-item" href="{% url 'shellies/details' %}">Details</a>
+                            </div>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'settings' %}" class="list-group-item list-group-item-action bg-light">Shelly Settings-Updater</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="{% url 'home' %}" id="navbarDropdownSettings"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shelly-Settings</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownSettings">
+                                <a class="dropdown-item" href="{% url 'settings' %}">Wizard</a>
+                                <a class="dropdown-item" href="{% url 'settings/overview' %}">Overview</a>
+                            </div>
                         </li>
-                        <li class="nav-item">
-                            {% if OH_ACTIVE %}
-                                <a class="nav-link" href="{% url 'things' %}" class="list-group-item list-group-item-action bg-light">Obenhab Things</a>
-                            {% endif %}
+                        {% if OH_ACTIVE %}
+                            <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="{% url 'home' %}" id="navbarDropdownOpenhab"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Openhab</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownOpenhab">
+                                <a class="dropdown-item" href="{% url 'things' %}">Things</a>
+                            </div>
                         </li>
+                        {% endif %}
                     </ul>
                 </div>
             </nav>
@@ -95,6 +110,8 @@
             <script src="{% static 'js/jquery-3.4.1.min.js' %}" type="text/javascript"></script>
             <script src="{% static 'js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
             <script src="{% static 'js/bootstrap-table.min.js' %}" type="text/javascript"></script>
+            <script src="{% static 'js/bootstrap-table-filter-control.min.js' %}" type="text/javascript"></script>
+            <script src="{% static 'js/bootstrap-table-cookie.min.js' %}" type="text/javascript"></script>
             <script src="{% static 'js/bootstrap-table-multiple-sort.min.js' %}" type="text/javascript"></script>
         {% endblock footer_javascript_site %}
         {% block footer_javascript_section %}{% endblock footer_javascript_section %}
