Added Door Window Settings Minor UI/Table improvements

--- a/shellyupdater/setter/templates/settings_overview.html
+++ b/shellyupdater/setter/templates/settings_overview.html
@@ -28,7 +28,7 @@
                     data-pagination="true"
                     data-page-size="25"
                     data-show-multi-sort="true"
-                    data-sort-priority='[{"sortName": "update_applied","sortOrder":"desc"},{"sortName": "shelly_type","sortOrder":"asc"},{"sortName":"shelly_id","sortOrder":"asc"}]'
+                    data-sort-priority='[{"sortName": "update_applied","sortOrder":"desc"},{"sortName": "last_status_ts","sortOrder":"desc"},{"sortName": "shelly_type","sortOrder":"asc"},{"sortName":"shelly_id","sortOrder":"asc"}]'
                     data-cookie="false"
                     data-cookie-id-table="settingsOverview"
                     data-filter-control="true"
