--- a/shellyupdater/updates/templates/shellies_overview.html
+++ b/shellyupdater/updates/templates/shellies_overview.html
@@ -40,6 +40,7 @@
                     data-sort-priority='[{"sortName": "do_update","sortOrder":"desc"},{"sortName":"last_change","sortOrder":"desc"}]'
                     data-cookie="true"
                     data-cookie-id-table="shellyOverview"
+                    data-show-search-clear-button="true"
                     id="table">
                 <thead>
                     <tr>
