Changes in MQTT Handling Changes in Startup routine Improvements in Logging Improvements in Error Handling

--- a/shellyupdater/home/templates/home.html
+++ b/shellyupdater/home/templates/home.html
@@ -10,6 +10,17 @@
 
     {# Main Section #}
 
+    {% if mqtt_error %}
+
+        <div class="container-fluid">
+
+            <div class="row alert alert-danger" role="alert">
+                <strong>No MQTT Connection available!</strong>
+            </div>
+        </div>
+
+    {% endif %}
+
     <div class="container-fluid">
 
         <div class="row" style="margin-bottom:20px;">
