--- a/shellyupdater/updates/templates/shellies_overview.html
+++ b/shellyupdater/updates/templates/shellies_overview.html
@@ -50,7 +50,7 @@
                         <th data-field="shelly_online" data-sortable="true" class="" scope="col">Status</th>
                         <th data-field="shelly_settings" data-sortable="true" class="" scope="col" data-visible="false">Settings applied</th>
                         <th data-field="shelly_fw_version" data-sortable="true" class="" scope="col">Firmware</th>
-                        <th data-field="last_change" data-sortable="true" class="" scope="col">Last MQTT Update</th>
+                        <th data-field="last_change" data-sortable="true" class="" scope="col">Last MQTT Announce</th>
                         <th data-field="last_status" data-sortable="true" class="" scope="col" data-visible="false">Last Status</th>
                     </tr>
                 </thead>
